# cis194

lecture-01.hsproj/: .uuid  HW01_intro.hs  LEC01_intro.hs  Lecture01.cabal  _HW01_intro.hsplay  _LEC01_intro.hsplay
