name: Lecture01
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
author: Edvin CANDON
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable lecture01
    main-is: LEC01_intro.hs
    build-depends:
        base -any
    default-language: Haskell2010
    other-modules:
        HW01_intro

